--- a/boards/shields/janus/janus.conf
+++ b/boards/shields/janus/janus.conf
@@ -14,3 +14,8 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 # display battery as n%
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+# Use ZMK Status display
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
